--- a/credit.html
+++ b/credit.html
@@ -451,13 +451,13 @@
                                     <div class="spacing-3">
                                         <div class="credit-code__fields mb-2">
                                             <div class="form-field__wrapper">
-                                                <div class="form-field form-field--small form-field--bg">
+                                                <div class="form-field form-field--sms form-field--bg">
                                                     <input type="text" id="signup-code-2" class="form-field__input font-medium js-mask-code" placeholder=" " value="1234">
                                                     <label for="signup-code-2" class="form-field__label">Код из SMS</label>
                                                 </div>
                                             </div>
                                     
-                                            <button class="button-link font-medium" disabled>Выслать повторно</button>
+                                            <button class="text link-purple w-100 font-medium" disabled>Выслать повторно</button>
                                         </div>
                                         <div class="color-dark-700">Отправить код повторно можно через 55 сек.</div>
                                     </div>
